assignment information can display in a line

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
         }
         .user-item{
             width:100%;
+            display: -webkit-box;
             -webkit-box-orient:horizontal;
         }
         .user-item div{
-            width:50%;
+            width:25%;
             text-align:center;
             border-left:solid 1px #7088AD;
             border-bottom:solid 1px #7088AD;
