--- a/index.html
+++ b/index.html
@@ -35,17 +35,27 @@
                 background-color:#7088AD;
                 width:50%;
             }
-            .user-item{
+            .problem-item {
                 width:100%;
                 display: -webkit-box;
+                border-right:solid 1px;
+                border-left:solid 1px;
+                border-bottom:solid 1px;
                 -webkit-box-orient:horizontal;
             }
-            .user-item div{
+            .chapter-item {
+                width:100%;
+                display: -webkit-box;
+                border-left:solid 1px;
+                border-bottom:solid 1px;
+                -webkit-box-orient:horizontal;
+            }
+            /*.problem-item div{
                 width:25%;
                 text-align:center;
                 border-left:solid 1px #7088AD;
                 border-bottom:solid 1px #7088AD;
-            }
+            }*/
             .x-item-selected{
                 background-color:#7088AD;
                 color:white;
