changed the view style of practice view and exportgrade view and change userinfo from localstorage to session storage

--- a/index.html
+++ b/index.html
@@ -38,17 +38,32 @@
             .problem-item {
                 width:100%;
                 display: -webkit-box;
-                border-right:solid 1px;
-                border-left:solid 1px;
-                border-bottom:solid 1px;
+                border-bottom:solid 1px #c2c2c2;
                 -webkit-box-orient:horizontal;
             }
             .chapter-item {
                 width:100%;
                 display: -webkit-box;
-                border-left:solid 1px;
-                border-bottom:solid 1px;
+                border-bottom:solid 1px #c2c2c2;
                 -webkit-box-orient:horizontal;
+            }
+            .assignment-item{
+                width:100%;
+                display: -webkit-box;
+                -webkit-box-orient: horizontal;
+            }
+            .assignment-title {
+                font-size: 14px;
+                color: #FFFFFF;
+                text-align: center;
+                background-color:#7088AD;
+                width:25%;
+            }
+            .assignment-item div{
+                width:25%;
+                text-align:center;
+                border-left: solid 1px #7088AD;
+                border-bottom:solid 1px #7088AD;
             }
             /*.problem-item div{
                 width:25%;
@@ -57,9 +72,11 @@
                 border-bottom:solid 1px #7088AD;
             }*/
             .x-item-selected{
-                background-color:#7088AD;
+                background-color:rgb(27,134,204);
                 color:white;
+                font-weight:bold;
             }
+
             .students{
                 width:100%;
                 display: -webkit-box;
