--- a/index.html
+++ b/index.html
@@ -53,17 +53,34 @@
                 -webkit-box-orient: horizontal;
             }
             .assignment-title {
-                font-size: 14px;
+                font-size: 16px;
                 color: #FFFFFF;
                 text-align: center;
                 background-color:#7088AD;
                 width:25%;
+            }
+            .assignment-title1 {
+                font-size: 16px;
+                color: #FFFFFF;
+                text-align: center;
+                background-color:#7088AD;
+                width:20%;
             }
             .assignment-item div{
                 width:25%;
                 text-align:center;
                 border-left: solid 1px #7088AD;
                 border-bottom:solid 1px #7088AD;
+            },
+            .students{
+                width:100%;
+                display: -webkit-box;
+                -webkit-box-orient: horizontal;
+            }
+            .students div{
+                width:25%;
+                text-align:center;
+                border: solid 1px #ccc;
             }
             /*.problem-item div{
                 width:25%;
@@ -76,7 +93,6 @@
                 color:white;
                 font-weight:bold;
             }
-
             .students{
                 width:100%;
                 display: -webkit-box;
@@ -87,6 +103,17 @@
                 font-size:12px;
                 text-align:center;
                 border: solid 1px #ccc;
+            }
+            .normal_btn
+            {
+                font-size: 12px;
+                width: 68px;
+                height: 20px;	
+                cursor: hand;
+                border:none;
+                font-family: Arial, Helvetica,sans-serif;
+                background-image: url(images/but_bg.gif);
+                color: white;
             }
         </style>
         <style type="text/css">
