--- a/index.html
+++ b/index.html
@@ -68,6 +68,18 @@
                 text-align:center;
                 border: solid 1px #ccc;
             }
+            .problems{
+                width:100%;
+                height:25px;
+                display: -webkit-box;
+                -webkit-box-orient: horizontal;
+            }
+            .problems div{
+                width:50%;
+                font-size:16px;
+                text-align:center;
+                border: solid 1px #ccc;
+            }
             .normal_btn
             {
                 font-size: 12px;
